--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Hello Panda!</h1>
+    <h1>Hello Panda!</h1>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
