--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shoes Website</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Header starts -->
@@ -53,8 +52,8 @@
 
     <!-- Main starts -->
     <main>
-      <section class="title">
-        <div class="row">
+      <section class="title mt-5">
+        <div class="row container-fluid">
           <div class="col-lg-6">
             <h1><span style="color: coral"> Nike React</span></h1>
             <h1><span style="color: coral">Infinity Run 2</span></h1>
@@ -74,7 +73,7 @@
           </div>
         </div>
       </section>
-      <section class="card mt-5">
+      <section class="mt-5 container-fluid">
         <h3>CASUAL SHOES</h3>
         <div class="row row-cols-1 row-cols-md-3 lg-4">
           <div class="col">
@@ -130,7 +129,7 @@
           </div>
         </div>
       </section>
-      <section class="mt-5">
+      <section class="mt-5 container-fluid">
         <h3>Backpack</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
@@ -193,19 +192,57 @@
           </div>
         </div>
       </section>
-      <section
-        style="height: 300px"
-        class="bg-info mt-5 d-flex align-items-center justify-content-center"
-      >
-        <div>
-          <h1>LET'S STAY IN TOUCH</h1>
-          <h5>Get update on salse, specials and more</h5>
-          <input type="text" placeholder="Enter Your Email Address" />
-          <button class="btn btn-warning">SUBMIT</button>
+      <section class="about container-fluid mt-5">
+        <div class="row">
+          <div class="col-lg-7">
+            <img src="images/image 12.png" width="100px" height="70px" alt="" />
+            <b> Find the Perfect Fit</b>
+            <p>
+              Everybody is different, which is why we offer styles for every
+              body
+            </p>
+            <img src="images/image 13.png" width="100px" height="70px" alt="" />
+            <b> Find the Perfect Fit</b>
+            <p>
+              Everybody is different, which is why we offer styles for every
+              body
+            </p>
+            <img src="images/image 14.png" width="100px" height="70px" alt="" />
+            <b> Find the Perfect Fit</b>
+            <p>
+              Everybody is different, which is why we offer styles for every
+              body
+            </p>
+          </div>
+          <div class="col-lg-5">
+            <img src="images/XMLID 1.png" width="400px" height="300px" alt="" />
+          </div>
         </div>
       </section>
     </main>
     <!-- Main ends -->
+    <section class="footer mt-5 container-fluid">
+      <div class="row text-center">
+        <div class="col-lg-12">
+          <div class="contact-details">
+            <h3>Contact Details</h3>
+            <div>
+              <h5>Khalid Website</h5>
+              <address>192 Dash Road</address>
+            </div>
+            <div>
+              <h5>Phone:</h5>
+              <p>+88 01300000000</p>
+              <br />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="text-center">
+      <p>&copy; All Rights Reserved</p>
+      <p>Developed by Khalid Hasan</p>
+    </footer>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
