--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </section>
       <section class="mt-5 container-fluid">
-        <h3>CASUAL SHOES</h3>
+        <h3 class="text-center">CASUAL SHOES</h3>
         <div class="row row-cols-1 row-cols-md-3 lg-4">
           <div class="col">
             <div class="card h-100 shadow">
@@ -130,7 +130,7 @@
         </div>
       </section>
       <section class="mt-5 container-fluid">
-        <h3>Backpack</h3>
+        <h3 class="text-center">Formal shoes</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card h-100 shadow">
@@ -194,28 +194,33 @@
       </section>
       <section class="about container-fluid mt-5">
         <div class="row">
+          <div class="col-lg-5">
+            <img
+              src="images/XMLID 1.png"
+              width="400px"
+              height="300px"
+              alt=""
+            /><br /><br />
+          </div>
           <div class="col-lg-7">
             <img src="images/image 12.png" width="100px" height="70px" alt="" />
-            <b> Find the Perfect Fit</b>
-            <p>
+            <b class="text-center">Find the Perfect Fit</b>
+            <p class="text-center">
               Everybody is different, which is why we offer styles for every
               body
             </p>
             <img src="images/image 13.png" width="100px" height="70px" alt="" />
-            <b> Find the Perfect Fit</b>
-            <p>
+            <b class="text-center">Free Exchanges</b>
+            <p class="text-center">
               Everybody is different, which is why we offer styles for every
               body
             </p>
             <img src="images/image 14.png" width="100px" height="70px" alt="" />
-            <b> Find the Perfect Fit</b>
-            <p>
+            <b class="text-center">Contact Our Seller</b>
+            <p class="text-center">
               Everybody is different, which is why we offer styles for every
               body
             </p>
-          </div>
-          <div class="col-lg-5">
-            <img src="images/XMLID 1.png" width="400px" height="300px" alt="" />
           </div>
         </div>
       </section>
